@@ -360,7 +360,22 @@ class spectrum:
 		except KeyError:
 			binary = 'spectrum'
 
-		cmd = [ binary, self.config_path ]
+		# --debug implies --no-daemon:
+		if self.options.debug:
+			self.options.no_daemon = True
+
+		# get the absolute path of the config file, so we can change to
+		# spectrums homedir
+		path = os.path.abspath( self.config_path )
+		home = pwd.getpwnam('spectrum')['pw_dir']
+		os.chdir( home )
+
+		cmd = [ binary ]
+		if self.options.no_daemon:
+			cmd.append( '-n' )
+		if self.options.debug:
+			binary = 'ulimit -c unlimited; ' + binary
+		cmd.append( path )
 		cmd = self.su_cmd( cmd )
 		retVal = subprocess.call( cmd )
 		if retVal != 0:
