@@ -22,6 +22,7 @@ version 0.2 (20??-??-??):
 	  on all the important files and directories.
 	* Accept $filename as variable
 	* Statistics gathering via config_interface
+	* Two new command-line options: --no-daemon and --debug.
 	* env-variable SPECTRUM_PATH can now configure how spectrumctl is
 	  called. If the variable is set, it assumes that spectrum is in its
 	  PATH.
